[gd_scene load_steps=6 format=2]

[ext_resource path="res://testing/hendry/TempSVPlayer.gd" type="Script" id=1]
[ext_resource path="res://testing/assets/arm.png" type="Texture" id=2]
[ext_resource path="res://scenes/common/player/inventory.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 30.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.5, 10.625 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )
suck_power = 201

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Hand" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Inventory" parent="Hand" instance=ExtResource( 3 )]
position = Vector2( 70, 0 )

[node name="Direct Range" type="Area2D" parent="Hand"]
position = Vector2( 45, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hand/Direct Range"]
polygon = PoolVector2Array( 30, 0, 30, -102, 500, -200, 550, -60, 550, 60, 500, 200, 30, 104 )

[node name="Sprite" type="Sprite" parent="Hand"]
position = Vector2( 13.8125, -0.4375 )
scale = Vector2( 0.425, 0.346239 )
texture = ExtResource( 2 )

[node name="Arm" type="CollisionShape2D" parent="Hand"]
visible = false
position = Vector2( 16.125, -0.625 )
shape = SubResource( 2 )

[node name="Arm Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -2 )
polygon = PoolVector2Array( 10, -10, 35, -10, 43.75, -7.5, 43.75, 8.75, 36.25, 11.25, -2.5, 11.25, -10, 6.25, -12.5, -1.25, -8.75, -6.25, 0, -10 )

[connection signal="body_entered" from="Hand/Inventory" to="." method="_on_Inventory_body_entered"]
[connection signal="body_entered" from="Hand/Direct Range" to="." method="_on_Direct_Range_body_entered"]
[connection signal="body_exited" from="Hand/Direct Range" to="." method="_on_Direct_Range_body_exited"]
